Removed redundant custom implementation of DynamicArray

--- a/ChessGamePracticumPROJECT/ChessGamePracticumPROJECT.vcxproj
+++ b/ChessGamePracticumPROJECT/ChessGamePracticumPROJECT.vcxproj
@@ -149,8 +149,8 @@
     <ClInclude Include="Bishop.h" />
     <ClInclude Include="Board.h" />
     <ClInclude Include="Color.h" />
+    <ClInclude Include="Command.h" />
     <ClInclude Include="ConsoleView.h" />
-    <ClInclude Include="DynamicArray.h" />
     <ClInclude Include="Figure.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="Horse.h" />
