--- a/ChessGamePracticumPROJECT/ChessGamePracticumPROJECT.vcxproj.filters
+++ b/ChessGamePracticumPROJECT/ChessGamePracticumPROJECT.vcxproj.filters
@@ -9,10 +9,6 @@
       <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
       <Extensions>h;hh;hpp;hxx;hm;inl;inc;xsd</Extensions>
     </Filter>
-    <Filter Include="Resource Files">
-      <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
-      <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
-    </Filter>
     <Filter Include="Source Files\Figures">
       <UniqueIdentifier>{d7f8ff80-f218-408e-9f96-efe8d75118ff}</UniqueIdentifier>
     </Filter>
@@ -24,6 +20,13 @@
     </Filter>
     <Filter Include="Source Files\Core">
       <UniqueIdentifier>{bc672722-11ed-4003-b4cb-eb7f205fa324}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\Resource Files">
+      <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
+      <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
+    </Filter>
+    <Filter Include="Header Files\Core\Commands">
+      <UniqueIdentifier>{c45d36c9-ebc4-4401-bcaa-124da86a3e93}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -49,12 +52,6 @@
       <Filter>Header Files\Core</Filter>
     </ClInclude>
     <ClInclude Include="Color.h">
-      <Filter>Header Files\Core</Filter>
-    </ClInclude>
-    <ClInclude Include="DynamicArray.h">
-      <Filter>Header Files\Core</Filter>
-    </ClInclude>
-    <ClInclude Include="Move.h">
       <Filter>Header Files\Core</Filter>
     </ClInclude>
     <ClInclude Include="Position.h">
@@ -83,6 +80,12 @@
     </ClInclude>
     <ClInclude Include="Spot.h">
       <Filter>Header Files\Figures</Filter>
+    </ClInclude>
+    <ClInclude Include="Command.h">
+      <Filter>Header Files\Core\Commands</Filter>
+    </ClInclude>
+    <ClInclude Include="Move.h">
+      <Filter>Header Files\Core\Commands</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
